--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ minimal_mistakes_skin    : "dark" # "default", "air", "aqua", "contrast", "dark"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Site Title"
+title                    : "Take a look around"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "Positnam`s Technology Blog"
 description              : "An amazing website."
 url                      : "https://ehdghks316.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
